--- a/mpv.conf
+++ b/mpv.conf
@@ -4,3 +4,9 @@ osd-bar=no
 
 # uosc will draw its own window controls and border if you disable window border
 border=no
+
+# Start mpv with a % smaller resolution of your screen
+autofit=80%x80%				
+
+# Don't close the player after finishing the video
+keep-open=yes				
